# backend/src/main/java/nh/recipify/domain/api/PageResponse.java
@@ -4,18 +4,31 @@ import jakarta.validation.constraints.NotNull;
 import org.springframework.data.domain.Page;
 
 import java.util.List;
+import java.util.Optional;
 
 public record PageResponse<T>(@NotNull List<T> content,
                               @NotNull int pageNumber,
                               @NotNull int totalPages,
                               @NotNull boolean hasNext,
-                              @NotNull boolean hasPrevious) {
+                              @NotNull boolean hasPrevious,
+                              Optional<String> meta) {
 
     public static <T> PageResponse<T> of(Page<T> target) {
 
         return new PageResponse<>(target.getContent(),
             target.getNumber(),
             target.getTotalPages(),
-            target.hasNext(), target.hasPrevious());
+            target.hasNext(), target.hasPrevious(),
+            Optional.empty());
     }
+
+    public static <T> PageResponse<T> of(Page<T> target, String meta) {
+
+        return new PageResponse<>(target.getContent(),
+            target.getNumber(),
+            target.getTotalPages(),
+            target.hasNext(), target.hasPrevious(),
+            Optional.ofNullable(meta));
+    }
+
 }
